--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <span class="author-block">
                 <a href="https://cvg.cit.tum.de/members/khamuham" target="_blank">Qadeer Khan</a><sup>1,2</sup>,</span>
               <span class="author-block">
-                <a href="https://cvg.cit.tum.de" target="_blank">Mahmoud Ahmed</a><sup>1</sup>,</span>
+                <a href="https://www.linkedin.com/in/mahmoud-hassan-512a57167" target="_blank">Mahmoud Ahmed</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://www.mae.ed.tum.de/en/cbm/about-us/staff-a-z/kostic-viktor/" target="_blank">Viktor Kostic</a><sup>1</sup>,</span>
               <span class="author-block">
