--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description"
-    content="CoGEN: Concrete image GENeration for enhancing the semantic prediction of air voids and aggregates using diffusion models - Project Page">
-  <meta property="og:title" content="CoGEN: Concrete image GENeration for enhancing the semantic prediction of air voids and aggregates using diffusion models" />
+    content="Improving the Detection of Air-voids and Aggregates in Concrete Images using Generative AI  - Project Page">
+  <meta property="og:title" content="Improving the Detection of Air-voids and Aggregates in Concrete Images using Generative AI " />
   <meta property="og:description"
-    content="CoGEN: Concrete image GENeration for enhancing the semantic prediction of air voids and aggregates using diffusion models - Project Page" />
+    content="Improving the Detection of Air-voids and Aggregates in Concrete Images using Generative AI  - Project Page" />
   <meta property="og:url" content="https://cvg.cit.tum.de/" />
 
 
-  <meta name="twitter:title" content="CoGEN: Concrete image GENeration for enhancing the semantic prediction of air voids and aggregates using diffusion models">
+  <meta name="twitter:title" content="Improving the Detection of Air-voids and Aggregates in Concrete Images using Generative AI ">
   <meta name="twitter:description"
-    content="CoGEN: Concrete image GENeration for enhancing the semantic prediction of air voids and aggregates using diffusion models - Project Page">
+    content="Improving the Detection of Air-voids and Aggregates in Concrete Images using Generative AI  - Project Page">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="Diffusion Models GenerativeAI computer-vision deep-learning AI">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>CoGEN: Concrete image GENeration for enhancing the semantic prediction of air voids and aggregates using diffusion models</title>
+  <title>Improving the Detection of Air-voids and Aggregates in Concrete Images using Generative AI </title>
   <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
