--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">CoGEN: Concrete image GENeration for enhancing the semantic prediction of air voids and aggregates using diffusion models</h1>
+            <h1 class="title is-1 publication-title">Improving the Detection of Air-voids and Aggregates in Concrete Images using Generative AI</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
