--- a/index.html
+++ b/index.html
@@ -102,7 +102,16 @@
   </section>
 
 
-  
+  <!-- Announcement -->
+  <section class="section hero" id="announcement">
+    <div class="container is-max-desktop">
+      <div class="hero-body has-text-centered">
+        <h2 class="title is-3">[Further Information to follow after the GNI Symposium (10-12 September, 2024)]</h2>
+
+      </div>
+    </div>
+  </section>
+  <!-- Announcement -->  
 
 
   <!-- Paper video -->
