--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <section class="section hero" id="announcement">
     <div class="container is-max-desktop">
       <div class="hero-body has-text-centered">
-        <h2 class="title is-3">[Further Information to follow after the GNI Symposium (10-12 September, 2024)]</h2>
+        <h2 class="title is-2">Accepted to the  the GNI Symposium on Artificial Intelligence for the Built World </h2>
 
       </div>
     </div>
